add animation to text box

--- a/css/style.css
+++ b/css/style.css
@@ -55,6 +55,7 @@ body {
 .heading-primary {
     color: #fff;
     text-transform: uppercase;
+    backface-visibility: hidden; /*little bit shake is happen in word*/
 }
 
 .heading-primary-main {
@@ -62,6 +63,9 @@ body {
      font-size: 60px;
      font-weight: 700;
      letter-spacing: 35px;
+     animation-name: moveInLeft;
+     animation-duration: 1s;
+     animation-timing-function: ease-out;
 }
 
 .heading-primary-sub {
@@ -69,4 +73,35 @@ body {
      font-size: 20px;
      font-weight: 900;
      letter-spacing: 14.6px;
+    animation-name: moveInRight;
+    animation-duration: 1s;
+    animation-timing-function: ease-out;
+}
+
+@keyframes moveInLeft {
+     0% {
+          opacity: 0;
+          transform: translateX(-100px);
+        }
+    80% {
+          transform: translateX(10px);
+        }
+    100% {
+          opacity: 1;
+          transform: translateX(0);
+         }
+}
+
+@keyframes moveInRight {
+    0% {
+        opacity: 0;
+        transform: translateX(100px);
+    }
+    80% {
+        transform: translateX(-10px);
+    }
+    100% {
+        opacity: 1;
+        transform: translateX(0);
+    }
 }
