--- a/css/style.css
+++ b/css/style.css
@@ -7,20 +7,27 @@ Dark green: #28b485
 
 */
 
-/* defining universal selector */
-* {
+/* defining universal selector , only universal element get the behaviour not pseudo element*/
+*,
+*::after,
+*::before{
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    box-sizing: inherit;
+}
+
+html {
+    font-size: 62.5%;  /* 1rem == 10px (default size is 16px == 100% , when the user change the default size 18px than it change automatically also) */
 }
 
 body {
     font-family: "Lato", sans-serif ;
     font-weight: 400;
-    font-size: 16px;
+    font-size: 1.6rem;
     line-height: 1.7;
     color: #777;
-    padding: 30px;
+    padding: 3rem;
+    box-sizing: border-box;
 }
 
 .header {
@@ -35,17 +42,17 @@ body {
     position: relative;
 }
 
-.logo-box {
+.header__logo-box {
    position: absolute;
-   top: 40px;
-   left: 40px;
+   top: 4rem;
+   left: 4rem;
 }
 
-.logo {
-    height: 35px;
+.header__logo {
+    height: 3.5rem;
 }
 
-.text-box {
+.header__text-box {
     position: absolute;
     top: 40%;
     left: 50%;
@@ -57,24 +64,24 @@ body {
     color: #fff;
     text-transform: uppercase;
     backface-visibility: hidden; /*little bit shake is happen in word*/
-    margin-bottom: 60px;
+    margin-bottom: 6rem;
 }
 
-.heading-primary-main {
+.heading-primary--main {
      display: block;
-     font-size: 60px;
+     font-size: 6rem;
      font-weight: 700;
-     letter-spacing: 35px;
+     letter-spacing: 3.5rem;
      animation-name: moveInLeft;
      animation-duration: 1s;
      animation-timing-function: ease-out;
 }
 
-.heading-primary-sub {
+.heading-primary--sub {
      display: block;
-     font-size: 20px;
+     font-size: 2rem;
      font-weight: 900;
-     letter-spacing: 14.6px;
+     letter-spacing: 1.5rem;
     animation-name: moveInRight;
     animation-duration: 1s;
     animation-timing-function: ease-out;
@@ -83,10 +90,10 @@ body {
 @keyframes moveInLeft {
      0% {
           opacity: 0;
-          transform: translateX(-100px);
+          transform: translateX(-10rem);
         }
     80% {
-          transform: translateX(10px);
+          transform: translateX(1rem);
         }
     100% {
           opacity: 1;
@@ -97,10 +104,10 @@ body {
 @keyframes moveInRight {
     0% {
         opacity: 0;
-        transform: translateX(100px);
+        transform: translateX(10rem);
     }
     80% {
-        transform: translateX(-10px);
+        transform: translateX(-1rem);
     }
     100% {
         opacity: 1;
@@ -111,7 +118,7 @@ body {
 @keyframes moveInBottom {
      0% {
          opacity: 0;
-         transform: translateY(30px);
+         transform: translateY(3rem);
      } /* these property set initially before animation start (animation-fill-mode)*/
      100% {
          opacity: 1;
@@ -123,9 +130,9 @@ body {
 .btn:visited {
     text-transform: uppercase;
     text-decoration: none;
-    padding: 15px 40px;
+    padding: 1.5rem 4rem;
     display: inline-block;
-    border-radius: 100px;
+    border-radius: 10rem;
     position: relative;
     transition: all .2s;
 }
@@ -136,13 +143,13 @@ body {
 }
 
 .btn:hover {
-    transform: translateY(-3px);
-    box-shadow: 0 10px 20px rgba(0,0,0,.2);
+    transform: translateY(-0.3rem);
+    box-shadow: 0 1rem 2rem rgba(0,0,0,.2);
 }
 
 .btn:active {
     transform: translateY(-1px);
-    box-shadow: 0 5px 10px rgba(0,0,0,.2);
+    box-shadow: 0 0.5rem 1rem rgba(0,0,0,.2);
 }
 
 /* pseudo element */
@@ -151,7 +158,7 @@ body {
     display: inline-block;
     height: 100%;
     width: 100%;
-    border-radius: 100px;
+    border-radius: 10rem;
     position: absolute;
     top: 0;
     left: 0;
@@ -159,7 +166,7 @@ body {
     transition: all .4s;
 }
 
-.btn-white::after {
+.btn--white::after {
     background-color: #fff;
 }
 
@@ -168,7 +175,7 @@ body {
     opacity: 0;
 }
 
-.btn-animated {
+.btn--animated {
     animation-name: moveInBottom;
     animation-duration: .5s;
     animation-timing-function: ease-out;
