--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,7 +9,9 @@
 
 @import "components/button";
 @import "components/composition";
+@import "components/card";
 @import "components/features-box";
+
 
 @import "layout/grid";
 @import "layout/header";
