--- a/sass/base/_utilites.scss
+++ b/sass/base/_utilites.scss
@@ -5,3 +5,10 @@
 .u-margin-bottom-small{
   margin-bottom: 1.5rem;
 }
+.u-margin-top {
+  margin-top: 8rem;
+}
+
+.u-margin-huge {
+  margin-top: 10rem;
+}
