--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,10 +7,12 @@
 @import "base/typography";
 @import "base/utilites";
 
+@import "components/bg_video";
 @import "components/button";
 @import "components/composition";
 @import "components/card";
 @import "components/features-box";
+@import "components/story";
 
 
 @import "layout/grid";
