--- a/sass/base/_utilites.scss
+++ b/sass/base/_utilites.scss
@@ -1,14 +1,18 @@
-.u-center-text {text-align: center};
+.u-center-text {text-align: center !important;};
 .u-margin-bottom {
-  margin-bottom: 8rem;
+  margin-bottom: 8rem !important;
 }
 .u-margin-bottom-small{
-  margin-bottom: 1.5rem;
+  margin-bottom: 1.5rem !important;
+}
+
+.u-margin-bottom-medium {
+  margin-bottom: 4rem !important;
 }
 .u-margin-top {
-  margin-top: 8rem;
+  margin-top: 8rem  !important;
 }
 
 .u-margin-huge {
-  margin-top: 10rem;
+  margin-top: 10rem !important;
 }
