--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,6 +12,7 @@
 @import "components/composition";
 @import "components/card";
 @import "components/features-box";
+@import "components/form";
 @import "components/story";
 
 
