--- a/sass/main.scss
+++ b/sass/main.scss
@@ -13,6 +13,7 @@
 @import "components/card";
 @import "components/features-box";
 @import "components/form";
+@import "components/pop";
 @import "components/story";
 
 @import "layout/footer";
